kustomization/overlays/prod/kubernetes-mcp/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-mcp-svc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: kubernetes-mcp
  type: ClusterIP
